--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ pattern.usuario.id = formato de la expresion regular incorrecto
 requerido.usuario.nombre = el campo nombre es requerido
 IdentificadorRegex.usuario.id = formato de la expresion regular invalido con anotaciones
 Requerido.usuario.apellido = apellido requerido con anotaciones
+typeMismatch.java.lang.Integer = Debe ser un entero
+typeMismatch.usuario.cuenta = campo cuenta debe ser un entero
