validacion de fechas con NotNull y DateTimeFormat

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,5 @@ IdentificadorRegex.usuario.id = formato de la expresion regular invalido con ano
 Requerido.usuario.apellido = apellido requerido con anotaciones
 typeMismatch.java.lang.Integer = Debe ser un entero
 typeMismatch.usuario.cuenta = campo cuenta debe ser un entero
+typeMismatch.java.util.Date = Debe ser una fecha con formato yyyy-MM-dd
+typeMismatch.usuario.fechaNacimiento= el campo fecha debe ser una fecha con formato yyyy-MM-dd
